# 4WD-Omni-directional-Mobile-Robot

./: .gitignore  CMakeLists.txt  README.md  controller.py  package.xml  test.py
launch/: display.launch.py  gazebo.launch.py  simulation.launch.py
log/: latest_build  latest_list
rviz/: mecanum_bot.rviz
urdf/: materials.xacro  mecanum_robot.urdf.xacro  mecanum_wheel.xacro
